force-app/main/default/objects/Scheduling__c/Scheduling__c.object-meta.xml
<CustomObject>
    <description>The Scheduling object is used to manage and track the appointments or activities that are planned for clients.</description>
    <label>Scheduling</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedulings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>