force-app/main/default/objects/Scheduling__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact associated with this scheduling. This field links the scheduling to a specific client.</description>
    <inlineHelpText>Enter contact associated with this scheduling</inlineHelpText>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedulings</relationshipLabel>
    <relationshipName>Schedulings</relationshipName>
    <type>Lookup</type>
</CustomField>