force-app/main/default/objects/Scheduling__c/fields/Scheduling_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Date__c</fullName>
    <description>The date when the scheduling is planned to take place.</description>
    <inlineHelpText>Enter the date when the scheduling is planned to take place.</inlineHelpText>
    <label>Scheduling Date</label>
    <type>Date</type>
</CustomField>