force-app/main/default/objects/Scheduling__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <description>The total duration of the scheduling, calculated by summing the durations of all related items in the scheduling.</description>
    <inlineHelpText>The total duration of the scheduling</inlineHelpText>
    <label>Total Duration</label>
    <summarizedField>Schedule_Item__c.Duration__c</summarizedField>
    <summaryForeignKey>Schedule_Item__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>