force-app/main/default/objects/Scheduling__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <description>The total value of the scheduling, calculated by summing the costs of all related items in the scheduling.</description>
    <inlineHelpText>The total value of the scheduling</inlineHelpText>
    <label>Total Value</label>
    <summarizedField>Schedule_Item__c.Value__c</summarizedField>
    <summaryForeignKey>Schedule_Item__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>